# challenge-constancia

./: README.md  compose.yml
backend/: .env_example  Dockerfile  entrypoint.sh  main.py  postgres_script.py  pyproject.toml
backend/src/application/interfaces/: client.py
backend/src/application/usecases/: get_client.py
backend/src/application/usecases/dtos/: client.py
backend/src/application/usecases/responses/: client.py
backend/src/controllers/: client.py
backend/src/infra/databases/postgres/: database.py
backend/src/infra/repositories/: client.py
backend/src/infra/web/http/: client.py
frontend/: Dockerfile
frontend/painel/: package-lock.json  package.json
frontend/painel/src/: App.js  FilterForm.js  TableContainer.js  index.css
frontend/painel/src/components/: columns.js
